[tool.poetry]
name = "moex-api"
version = "0.1.0"
description = "MOEX API client"
authors = ["a.lesnikov <lav.codedev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.1.0"
aiohttp = "3.8.5"
pydantic = "2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
